[package]
name = "nss_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["noshishi"]
readme = "README.md"

[badges]
github = { repository = "nopeNoshishi/nss", workflow = "Rust" }

[dependencies]
anyhow = "1"
bincode = "1.3.3"
byteorder = "1.4.3"
colored = "2"
chrono = "0.4.6"
dirs = "4.0.0"
flate2 = "1.0.25"
sha-1 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4.2"
whoami = "1.4.0"
toml = "0.7.4"

[dev-dependencies]
testdir = "0.7.3"
