[package]
name = "nss_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["noshishi"]
readme = "README.md"
description = "nssi core logic"
repository = "https://github.com/nopeNoshishi/nss_core"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["/tests"]
include = ["/src"]
publish = true

[badges]
github = { repository = "nopeNoshishi/nss_core", workflow = "Rust" }

[dependencies]
anyhow = "1"
thiserror = "1"
bincode = "1.3.3"
byteorder = "1.4.3"
colored = "2"
chrono = "0.4.6"
dirs = "4.0.0"
flate2 = "1.0"
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4.2"
whoami = "1.5"
toml = "0.8"
similar = "2.2.1"

[dev-dependencies]
testdir = "0.7.3"
